-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.0 Beta
-
None
-
4794fce4be864b0a2054e4726e0ba4f595332c24
Build fails for ARM when Qt is configured with -qreal float in QtQuick Controls 2.
/home/jeremy/src/qt/qt5/qtquickcontrols2/src/templates/qquickcontrol.cpp:423:62: error: no matching function for call to ‘qMax(double, qreal)’
return qMax(0.0, width() - leftPadding() - rightPadding());
It's an easy fix: 0.0 needs to be cast to a qreal. It happens in lots of places.
I've attached a patch.
| For Gerrit Dashboard: QTBUG-50048 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 144313,3 | Fix build on ARM with -qreal float | 5.6 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |