Fix build on ARM with -qreal float

Change-Id: Id80ecea7bd79265d731e5c5e37c0acf0e344c8ab
Task-number: QTBUG-50048
Reviewed-by: J-P Nurmi <jpnurmi@theqtcompany.com>