src/templates/qquickswitch.cpp
@@ -185,7 +185,7 @@ qreal QQuickSwitch::position() const
 void QQuickSwitch::setPosition(qreal position)
 {
     Q_D(QQuickSwitch);
-    position = qBound(0.0, position, 1.0);
+    position = qBound<qreal>(0.0, position, 1.0);
     if (d->position != position) {
         d->position = position;
         emit positionChanged();
